@@ -1,5 +1,6 @@
 Changes in version 2.2.5
   o Issue 36894: labkey.domain.get fix to translate NULL values for string props to NA
+  o Issue 36837: correctly parse GROUP CONCAT response with array of string values
 
 Changes in version 2.2.4
   o New function to set and get module properties
